# Dasher-Windows

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  TODO.md  analytics-events.json  training_english_GB.txt
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: build-installer.yml
docs/: v5-alphabet-support-request.md
installer/: build-msix.ps1  dasher.wxs
installer/msix/: Package.appxmanifest
native/: CMakeLists.txt  WinBridge.cpp  WinCommandScreen.cpp  WinCommandScreen.h  WinDasherInterface.cpp  WinDasherInterface.h  WinFileUtils.cpp  build.cmd  build.ps1  do_build.cmd
scripts/: verify_posthog_exceptions.py
src/Dasher.Windows/: App.axaml  App.axaml.cs  Dasher.Windows.csproj  Program.cs  ViewLocator.cs  app.manifest
src/Dasher.Windows/Controls/: DasherCanvas.EyeGaze.cs  DasherCanvas.Joystick.cs  DasherCanvas.cs  OutputTextSettings.cs  PaneSettings.cs  SettingsPanel.cs
src/Dasher.Windows/Engine/: AccessConfiguration.cs  AccessMethod.cs  CommandRenderer.cs  EyeGazeIntegration.cs  NativeBridge.cs  ParameterKeys.cs  SelectionMethod.cs
src/Dasher.Windows/EyeGaze/: EyeGazeInputDevice.cs  IEyeTrackerService.cs  UdpGazeTracker.cs  WindowsGazeTracker.cs
src/Dasher.Windows/Input/: JoystickInputService.cs
src/Dasher.Windows/Services/: AnalyticsService.cs  AnalyticsSettings.cs  EngineLogRingBuffer.cs  ThemeBrushes.cs  ToastNotifier.cs  UpdateChecker.cs  V5MigrationService.cs
tests/Dasher.Windows.Tests/: Dasher.Windows.Tests.csproj  EngineLogRingBufferTests.cs  PiiScrubberTests.cs
(+9 files in other folders)
